git slider resulution check

--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -40,9 +40,9 @@
         /*overflow-y: auto;*/
         overflow: visible;
         height: auto;
-        position: absolute;
+        position: relative;
         top: 0px;
-        right: 223px;
+        right: 0px;
         z-index: 9;
     }
     
